k8s/disabled/authelia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: authelia
  name: authelia
  namespace: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      containers:
        - name: authelia
          image: ghcr.io/authelia/authelia:latest@sha256:1b363e9279e742397966333f364e0876ae02bf5c876de73e83af6d48c57ff51b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: authelia-data
            - mountPath: /secrets
              name: authelia-secrets
              readOnly: true
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: authelia-config
          name: authelia-config
        - hostPath:
            path: /config/authelia
            type: DirectoryOrCreate
          name: authelia-data
        - secret:
            secretName: authelia-credentials
          name: authelia-secrets
